Started adding styling for new design

--- a/.settings/com.appcelerator.titanium.core.prefs
+++ b/.settings/com.appcelerator.titanium.core.prefs
@@ -1,21 +1,5 @@
 eclipse.preferences.version=1
-provisioning_profiles/development/092F7995-BB2C-4969-85D7-B6163D257E5A/appid=com.domgan.exdata
-provisioning_profiles/development/092F7995-BB2C-4969-85D7-B6163D257E5A/filepath=/Users/ADM/Library/MobileDevice/Provisioning Profiles/092F7995-BB2C-4969-85D7-B6163D257E5A.mobileprovision
-provisioning_profiles/development/092F7995-BB2C-4969-85D7-B6163D257E5A/name=eXdata AdHoc
-provisioning_profiles/development/092F7995-BB2C-4969-85D7-B6163D257E5A/uuid=092F7995-BB2C-4969-85D7-B6163D257E5A
-provisioning_profiles/development/93C221B4-C4A2-4C29-A292-6F592199C6A6/appid=com.domgan.exdata
-provisioning_profiles/development/93C221B4-C4A2-4C29-A292-6F592199C6A6/filepath=/Users/ADM/Library/MobileDevice/Provisioning Profiles/93C221B4-C4A2-4C29-A292-6F592199C6A6.mobileprovision
-provisioning_profiles/development/93C221B4-C4A2-4C29-A292-6F592199C6A6/name=eXdata
-provisioning_profiles/development/93C221B4-C4A2-4C29-A292-6F592199C6A6/uuid=93C221B4-C4A2-4C29-A292-6F592199C6A6
-provisioning_profiles/development/BAA8486A-60DD-4367-9BC9-75267B5F8DFA/appid=com.excap.exdata
-provisioning_profiles/development/BAA8486A-60DD-4367-9BC9-75267B5F8DFA/filepath=/Users/ADM/Library/MobileDevice/Provisioning Profiles/BAA8486A-60DD-4367-9BC9-75267B5F8DFA.mobileprovision
-provisioning_profiles/development/BAA8486A-60DD-4367-9BC9-75267B5F8DFA/name=eXdata Dev Prov
-provisioning_profiles/development/BAA8486A-60DD-4367-9BC9-75267B5F8DFA/uuid=BAA8486A-60DD-4367-9BC9-75267B5F8DFA
-provisioning_profiles/development/CD24899F-37E9-4333-B003-F16EBB0240E0/appid=com.domgan.exdata
-provisioning_profiles/development/CD24899F-37E9-4333-B003-F16EBB0240E0/filepath=/Users/ADM/Library/MobileDevice/Provisioning Profiles/CD24899F-37E9-4333-B003-F16EBB0240E0.mobileprovision
-provisioning_profiles/development/CD24899F-37E9-4333-B003-F16EBB0240E0/name=eXdata
-provisioning_profiles/development/CD24899F-37E9-4333-B003-F16EBB0240E0/uuid=CD24899F-37E9-4333-B003-F16EBB0240E0
-provisioning_profiles/development/E0AD43DB-9AB5-46CE-BCBA-83B1D755C5C7/appid=com.domgan.exdata
-provisioning_profiles/development/E0AD43DB-9AB5-46CE-BCBA-83B1D755C5C7/filepath=/Users/ADM/Library/MobileDevice/Provisioning Profiles/E0AD43DB-9AB5-46CE-BCBA-83B1D755C5C7.mobileprovision
-provisioning_profiles/development/E0AD43DB-9AB5-46CE-BCBA-83B1D755C5C7/name=eXdata AdHoc
-provisioning_profiles/development/E0AD43DB-9AB5-46CE-BCBA-83B1D755C5C7/uuid=E0AD43DB-9AB5-46CE-BCBA-83B1D755C5C7
+provisioning_profiles/development/7CCD2292-45D4-42AA-8DD5-C2C13A431EB9/appid=com.101010.wyn
+provisioning_profiles/development/7CCD2292-45D4-42AA-8DD5-C2C13A431EB9/filepath=/Users/graham/Library/MobileDevice/Provisioning Profiles/7CCD2292-45D4-42AA-8DD5-C2C13A431EB9.mobileprovision
+provisioning_profiles/development/7CCD2292-45D4-42AA-8DD5-C2C13A431EB9/name=WYN development
+provisioning_profiles/development/7CCD2292-45D4-42AA-8DD5-C2C13A431EB9/uuid=7CCD2292-45D4-42AA-8DD5-C2C13A431EB9
