--- a/.settings/com.appcelerator.titanium.core.prefs
+++ b/.settings/com.appcelerator.titanium.core.prefs
@@ -3,3 +3,31 @@ provisioning_profiles/development/7CCD2292-45D4-42AA-8DD5-C2C13A431EB9/appid=com
 provisioning_profiles/development/7CCD2292-45D4-42AA-8DD5-C2C13A431EB9/filepath=/Users/graham/Library/MobileDevice/Provisioning Profiles/7CCD2292-45D4-42AA-8DD5-C2C13A431EB9.mobileprovision
 provisioning_profiles/development/7CCD2292-45D4-42AA-8DD5-C2C13A431EB9/name=WYN development
 provisioning_profiles/development/7CCD2292-45D4-42AA-8DD5-C2C13A431EB9/uuid=7CCD2292-45D4-42AA-8DD5-C2C13A431EB9
+provisioning_profiles/distribution/06C60780-DE73-468B-AADC-83A6C30312D4/appid=com.101010.wyn
+provisioning_profiles/distribution/06C60780-DE73-468B-AADC-83A6C30312D4/filepath=/Users/graham/Library/MobileDevice/Provisioning Profiles/06C60780-DE73-468B-AADC-83A6C30312D4.mobileprovision
+provisioning_profiles/distribution/06C60780-DE73-468B-AADC-83A6C30312D4/name=WYN production
+provisioning_profiles/distribution/06C60780-DE73-468B-AADC-83A6C30312D4/uuid=06C60780-DE73-468B-AADC-83A6C30312D4
+provisioning_profiles/distribution/0CCE256A-4D13-4CFD-B638-C6CC03D64257/appid=com.101010digital.mtw
+provisioning_profiles/distribution/0CCE256A-4D13-4CFD-B638-C6CC03D64257/filepath=/Users/graham/Library/MobileDevice/Provisioning Profiles/0CCE256A-4D13-4CFD-B638-C6CC03D64257.mobileprovision
+provisioning_profiles/distribution/0CCE256A-4D13-4CFD-B638-C6CC03D64257/name=MTW Live
+provisioning_profiles/distribution/0CCE256A-4D13-4CFD-B638-C6CC03D64257/uuid=0CCE256A-4D13-4CFD-B638-C6CC03D64257
+provisioning_profiles/distribution/320B342E-165F-4F5A-8EC9-317BF2FD3FA9/appid=*
+provisioning_profiles/distribution/320B342E-165F-4F5A-8EC9-317BF2FD3FA9/filepath=/Users/graham/Library/MobileDevice/Provisioning Profiles/320B342E-165F-4F5A-8EC9-317BF2FD3FA9.mobileprovision
+provisioning_profiles/distribution/320B342E-165F-4F5A-8EC9-317BF2FD3FA9/name=iOS Team Provisioning Profile\: *
+provisioning_profiles/distribution/320B342E-165F-4F5A-8EC9-317BF2FD3FA9/uuid=320B342E-165F-4F5A-8EC9-317BF2FD3FA9
+provisioning_profiles/distribution/49007F59-61CF-4A87-A9F2-FE80626FB7B4/appid=*
+provisioning_profiles/distribution/49007F59-61CF-4A87-A9F2-FE80626FB7B4/filepath=/Users/graham/Library/MobileDevice/Provisioning Profiles/49007F59-61CF-4A87-A9F2-FE80626FB7B4.mobileprovision
+provisioning_profiles/distribution/49007F59-61CF-4A87-A9F2-FE80626FB7B4/name=iOS Team Provisioning Profile\: *
+provisioning_profiles/distribution/49007F59-61CF-4A87-A9F2-FE80626FB7B4/uuid=49007F59-61CF-4A87-A9F2-FE80626FB7B4
+provisioning_profiles/distribution/4DEEC26D-922F-4176-96DD-F78E88AD0006/appid=com.101010digital.mtw
+provisioning_profiles/distribution/4DEEC26D-922F-4176-96DD-F78E88AD0006/filepath=/Users/graham/Library/MobileDevice/Provisioning Profiles/4DEEC26D-922F-4176-96DD-F78E88AD0006.mobileprovision
+provisioning_profiles/distribution/4DEEC26D-922F-4176-96DD-F78E88AD0006/name=MTW
+provisioning_profiles/distribution/4DEEC26D-922F-4176-96DD-F78E88AD0006/uuid=4DEEC26D-922F-4176-96DD-F78E88AD0006
+provisioning_profiles/distribution/7CCD2292-45D4-42AA-8DD5-C2C13A431EB9/appid=com.101010.wyn
+provisioning_profiles/distribution/7CCD2292-45D4-42AA-8DD5-C2C13A431EB9/filepath=/Users/graham/Library/MobileDevice/Provisioning Profiles/7CCD2292-45D4-42AA-8DD5-C2C13A431EB9.mobileprovision
+provisioning_profiles/distribution/7CCD2292-45D4-42AA-8DD5-C2C13A431EB9/name=WYN development
+provisioning_profiles/distribution/7CCD2292-45D4-42AA-8DD5-C2C13A431EB9/uuid=7CCD2292-45D4-42AA-8DD5-C2C13A431EB9
+provisioning_profiles/distribution/983D194E-1739-4807-8062-0FA120F3353E/appid=com.101010.wyn
+provisioning_profiles/distribution/983D194E-1739-4807-8062-0FA120F3353E/filepath=/Users/graham/Library/MobileDevice/Provisioning Profiles/983D194E-1739-4807-8062-0FA120F3353E.mobileprovision
+provisioning_profiles/distribution/983D194E-1739-4807-8062-0FA120F3353E/name=WYN development
+provisioning_profiles/distribution/983D194E-1739-4807-8062-0FA120F3353E/uuid=983D194E-1739-4807-8062-0FA120F3353E
